# org-simple

./: .gitignore  CMakeLists.txt  README.md  build  build-cmake.sh  check-header-consistency.sh
cmake/: org-simple-config.cmake.in
experiment/: experiments.cc
include/org-simple/: Align.h  AlignedAllocator.h  AlignedData.h  Alignment.h  Array.h  Circular.h  FakeClock.h  Index.h  LockfreeRingBuffer.h  NumArray.h  Predicate.h  Reference.h  SampleLayout.h  Signal.h  SignalManager.h  Size.h  Timeout.h  ZeroNonNormal.h  debug.h
include/org-simple/config/: Config.h  ConfigException.h  ConfigReaders.h  IntegralNumberReader.h
include/org-simple/core/: Align.h  Bits.h  Circular.h  ClassTraits.h  Index.h  Numbers.h  Power2.h  Size.h  ZeroNonNormal.h  align.h  attributes.h  bits.h  bounds.h  circular.h  debug.h  denormal.h  index.h  number_traits.h  power2.h  size.h
include/org-simple/dsp/: Biquad.h  GroupChannelMap.h  bucket-integration.h  iir-biquad.h  iir-butterworth.h  iir-coefficients.h  iir-filter.h  integration.h  rate.h  samplerate.h
include/org-simple/text/: CharEncode.h  Characters.h  CommentStream.h  EchoStream.h  InputStream.h  InputStreams.h  Json.h  LineContinuation.h  NumberParser.h  QuoteState.h  ReplayStream.h  StreamFilter.h  StreamPredicate.h  StreamProbe.h  StringStream.h  TextFilePosition.h  TokenizedStream.h  UnixNewLine.h  Utf8Stream.h
include/org-simple/util/: Array.h  ArrayTraits.h  BaseArray.h  CharEncode.h  Characters.h  CommentStream.h  Config.h  FakeClock.h  Generator.h  GroupChannelMap.h  GroupTopology.h  InputStream.h  LineContinuation.h  LockfreeRingBuffer.h  NumArray.h  PosixNewLine.h  Predicate.h  QuoteState.h  Reference.h  SampleLayout.h  Signal.h  SignalManager.h  Signals.h  StringStream.h  TextFilters.h  Timeout.h  Utf8Stream.h  debug.h  reference.h  timeout.h
include/org-simple/util/config/: Config.h  ConfigException.h  ConfigReaders.h  IntegralNumberReader.h
include/org-simple/util/dsp/: Biquad.h  GroupChannelMap.h  bucket-integration.h  iir-biquad.h  iir-butterworth.h  iir-coefficients.h  iir-filter.h  integration.h  rate.h
include/org-simple/util/text/: CharEncode.h  Characters.h  CommentStream.h  EchoStream.h  InputFilter.h  InputStream.h  InputStreams.h  Json.h  LineContinuation.h  NumberParser.h  PosixNewLine.h  QuoteState.h  ReplayStream.h  StreamFilter.h  StreamPredicate.h  StreamProbe.h  StringStream.h  TextFilePosition.h  TextFilters.h  TokenizedStream.h  UnixNewLine.h  Utf8Stream.h
test/: bits-tests.cc  bounds-tests.cc  circular-tests.cc  power2-tests.cc  test-helper.h
test/core/: Align-tests.cc  Bits-tests.cc  Circular-tests.cc  ClassTraits-tests.cc  Index-tests.cc  Numbers-tests.cc  Power2-tests.cc  Size-tests.cc  SizeMetric-tests.cc  bounds-tests.cc  power2-tests.cc
test/dsp/: iir-biquad-tests.cc  iir-butterworth-tests.cc  iir-coefficients-test-helper.h  iir-coefficients-tests.cc  iir-filter-tests.cc  integration-tests.cc  rate-tests.cc  samplerate-tests.cc
test/util/: Array-tests.cc  ArrayTraits-tests.cc  BaseArray-tests.cc  BlockAndLineComment-tests.cc  BlockCommentStream-tests.cc  CharEncode-tests.cc  Characters-tests.cc  CommentStream-tests.cc  FakeClock-tests.cc  GroupChannelMap-tests.cc  GroupTopology-tests.cc  LineCommentStream-tests.cc  LineContinuationStream-tests.cc  LockFreeRingBufferTests.cc  NestedBlockComment-tests.cc  NumArray-tests.cc  OwnedReference-tests.cc  OwnedReference.cc  OwnedReference.h  PosixNewlineStream-tests.cc  QuotedStateStream-tests.cc  RefCount-tests.cc  Reference-tests.cc  SampleLayoutTests.cc  Signal-tests.cc  SignalManager-tests.cc  Signals-tests.cc  StringStream-tests.cc  Timeout-tests.cc  Utf8Stream-tests.cc
test/util/config/: IntegralNumberReader-tests.cc  IntegralValueReader-tests.cc  KeyValueConfig-tests.cc
test/util/dsp/: iir-biquad-tests.cc  iir-butterworth-tests.cc  iir-coefficients-tests.cc  iir-filter-tests.cc  integration-tests.cc  rate-tests.cc  test-Biquad.cc
test/util/text/: BitsHelper.h  CharEncode-tests.cc  CommentStream-tests.cc  EchoStream-tests.cc  InputStream-tests.cc  Json-tests.cc  JsonEscape-tests.cc  LineContinuationStream-tests.cc  NewLineTokenizedStream-tests.cc  NumberParserFloatTest.cc  NumberParserIntegral-tests.cc  PosixNewlineStream-tests.cc  QuoteStateFilter-tests.cc  QuoteStateTokenizedStream-tests.cc  QuotedStateStream-tests.cc  ReplayStream-tests.cc  StreamProbe-tests.cc  StringStream-tests.cc  TokenizedStream-tests.cc  UnixNewlineStream-tests.cc  Utf8Stream-tests.cc  iir-coefficients-test-helper.h
